resources.tf
provider "aws" {
  region = var.region
}

resource "aws_vpc" "vpc" {
  cidr_block           = var.cidr_vpc
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = var.environment_tag
  }
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    Name = var.environment_tag
  }
}

resource "aws_eip" "ip" {
  count                  = "${length(var.private_cidr)}"
  vpc = true
}

resource "aws_eip" "ip1" {
  count                  = "${length(var.private_cidr)}"
  vpc = true
}

resource "aws_nat_gateway" "natgw1" {
  count          = "${length(var.public_cidr)}"
  allocation_id  =  aws_eip.ip[count.index].id
  subnet_id      = element(aws_subnet.subnet_public.*.id , count.index)

  tags = {
    Name = var.environment_tag
  }
}

resource "aws_subnet" "subnet_public" {
  count                    = "${length(var.public_cidr)}"
  vpc_id                  = aws_vpc.vpc.id
  cidr_block              = element(var.public_cidr , count.index)
  map_public_ip_on_launch = false
  availability_zone       = var.availability_zone

  tags = {
    Name = var.environment_tag
  }
}



resource "aws_subnet" "subnet_private1" {
  count                   = "${length(var.private_cidr)}"
  vpc_id                  =  aws_vpc.vpc.id
  cidr_block              =  element(var.private_cidr , count.index)
  availability_zone       =  var.availability_zone
  map_public_ip_on_launch = false

  tags = {
    Name = var.environment_tag
  }
}

resource "aws_route_table" "rtb_public" {
  vpc_id = aws_vpc.vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = {
    Name = var.environment_tag
  }
}

resource "aws_route_table" "rtb_private1" {
  count          = "${length(var.public_cidr)}"
  vpc_id = aws_vpc.vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = element(aws_nat_gateway.natgw1.*.id , count.index)
  }

  tags = {
    Name = var.environment_tag
  }
}

resource "aws_route_table_association" "rta_subnet_public" {
  count          = "${length(var.public_cidr)}"
  subnet_id      = element(aws_subnet.subnet_public.*.id , count.index)
  route_table_id = element(aws_route_table.rtb_public.*.id , count.index)
}

resource "aws_route_table_association" "rta_subnet_private1" {
  count          = "${length(var.private_cidr)}"
  subnet_id      = element(aws_subnet.subnet_private1.*.id , count.index)
  route_table_id = element(aws_route_table.rtb_private1.*.id , count.index)
}

resource "aws_security_group" "sg_22" {
  name   = "sg_22"
  vpc_id = aws_vpc.vpc.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.cidr_vpc, "49.37.173.251/32", "98.180.121.31/32"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = var.environment_tag
  }
}

resource "aws_eip_association" "eip_assoc" {
  count         = "${length(var.public_cidr)}"
  instance_id   = element(aws_instance.testInstance.*.id , count.index)
  allocation_id = aws_eip.ip1[count.index].id
}



resource "aws_instance" "testInstance" {
  count                  = "${length(var.public_cidr)}"
  ami                    = data.aws_ami.my_awslinux.id
  instance_type          = var.instance_type
  subnet_id              = element(aws_subnet.subnet_public.*.id , count.index)
  key_name               = "lakshminarsimha"
  vpc_security_group_ids = [aws_security_group.sg_22.id]

  tags = {
    Name = var.environment_tag
  }
}



resource "aws_instance" "testInstance1" {
  count                  = "${length(var.private_cidr)}"
  ami                    = data.aws_ami.my_awslinux.id
  instance_type          = var.instance_type
  subnet_id              = element(aws_subnet.subnet_private1.*.id , count.index)
  key_name               = "lakshminarsimha"
  vpc_security_group_ids = [aws_security_group.sg_22.id]

  tags = {
    Name = var.environment_tag
  }
}
